# comd

./: .gitignore  .goreleaser.yaml  Cargo.toml  LICENSE  README.md  mise.toml
.github/workflows/: releaser.yaml  rust.yml
config/: config.toml
scripts/: comd-widget.zsh
src/: actions.rs  app.rs  config.rs  main.rs  worker.rs
