[package]
name = "comd"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
crossterm = {version = "0.29.0", features = ["event-stream"]}
ratatui = "0.30.0"
tokio = {version = "1.51.1", features = ["rt-multi-thread", "macros", "sync"]}
futures = "0.3"
config = "0.15.22"
serde = {version = "1.0.228", features = ["derive"]}
rig-core = "0.35.0"

