[package]
name = "comd"
version = "0.1.0"
edition = "2024"

[dependencies]
color-eyre = "0.6.5"
crossterm = {version = "0.29.0", features = ["event-stream"]}
ratatui = "0.30.0"
tokio = {version = "1.51.1", features = ["rt-multi-thread", "macros", "sync"]}
futures = "0.3"
config = "0.15.22"
serde = {version = "1.0.228", features = ["derive"]}
rig-core = { version = "0.35.0", default-features = false, features = ["reqwest"] }
reqwest = { version = "0.13.2", default-features = false, features = ["rustls-no-provider", "charset", "http2"] }
rustls = { version = "0.23.38", default-features = false, features = ["ring", "std", "tls12"] }


